# Palash_Driverless_TP

./: README.md  q1.py  q2.py  q3.py
Task 1/: q2.py  t2-q1.py
Task1/: q1.py  q3.py
Task2/: t2-q1.py  t2-q2.py  t2-q3.py
Task3/: names.csv  t3-q1.py  t3-q2.py
Task5/task_one_msgs/: CMakeLists.txt  package.xml
Task5/task_one_msgs/msg/: TaskOne.msg
Task5/task_one_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
Task5/task_one_pkg/task_one_pkg/: publisher_node.py  subscriber_node.py
Task6/rt2_msgs/: CMakeLists.txt  package.xml
Task6/rt2_nodes/: package.xml  setup.cfg  setup.py
Task6/rt2_nodes/rt2_nodes/: node1_publisher.py  node2_palindrome_checker.py  node3_response.py
additional-python-tasks/: cost_function_optimization.py
