<?xml version="1.0"?>
<package format="3">
  <name>task_one_msgs</name>
  <version>0.0.0</version>
  <description>Custom message for Task One</description>
  <maintainer email="palash@example.com">palash</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
