<?xml version="1.0"?>
<package format="3">
  <name>task_one_pkg</name>
  <version>0.0.0</version>
  <description>Publisher and subscriber for TaskOne custom message</description>
  <maintainer email="palash@example.com">palash</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>task_one_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>


