<?xml version="1.0"?>
<package format="3">
  <name>rt2_nodes</name>
  <version>0.0.0</version>
  <description>Three communicating nodes for palindrome task</description>
  <maintainer email="palash@example.com">palash</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rt2_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
